--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,16 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application..</p>
+    <div class="container">
+      <div class="row text-center">
+        <h1>Can't choose where to eat?</h1>
+        <h3>Get a random restaurant near UPenn by clicking below</h3>
+        <button class="button-primary" id="get_restaurant">Get Gestaurant</button>
+      </div>
+      <div id="restaurant" class="row restaurant"></div>
+    </div>
+    
+
+
   </body>
 </html>
