index.html now reacts to app.js

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,10 @@
       <div class="row text-center">
         <h1>Can't choose where to eat?</h1>
         <h3>Get a random restaurant near UPenn by clicking below</h3>
-        <button class="button-primary" id="get_restaurant">Get Gestaurant</button>
+        <button class="button-primary" id="get_restaurant">Get Restaurant</button>
       </div>
       <div id="restaurant" class="row restaurant"></div>
     </div>
-    
-
-
+    <script type="text/javascript" src="./app.js"></script>
   </body>
 </html>
