--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       </div>
       <div id="restaurant" class="row restaurant"></div>
     </div>
+    <script type="text/javascript" src="./index.js"></script>
     <script type="text/javascript" src="./app.js"></script>
   </body>
 </html>
