--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,16 @@
   <body>
     <div class="container">
       <div class="row text-center">
+        <img src="upenn.jpg" height="100" width="305">
         <h1>Can't choose where to eat?</h1>
         <h3>Get a random restaurant near UPenn by clicking below</h3>
         <button class="button-primary" id="get_restaurant">Get Restaurant</button>
       </div>
-      <div id="restaurant" class="row restaurant"></div>
+      <div id="restaurant" class="row restaurant text-center">
+
+        
+
+      </div>
     </div>
     <script type="text/javascript" src="./index.js"></script>
     <script type="text/javascript" src="./app.js"></script>
