--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <img src="upenn.jpg" height="100" width="305">
         <h1>Can't choose where to eat?</h1>
         <h3>Get a random restaurant near UPenn by clicking below</h3>
-        <button class="button-primary" id="get_restaurant">Get Restaurant</button>
+        <button class="button-4" id="get_restaurant">Get Restaurant</button>
       </div>
       <div id="restaurant" class="row restaurant text-center">
 
